# BugsyWugsy_Demo

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ApplicationLogic.cpp  ApplicationLogic.h  CMakeLists.txt
src/comics/: ComicsScene.cpp  ComicsScene.h  ComicsSlide.cpp  ComicsSlide.h  ComicsSprite.cpp  ComicsSprite.h  ComicsText.cpp  ComicsText.h  ComicsWidget.h
src/components/: Component.h  ComponentRendering.h  ComponentUpdater.h
src/components/egg/: ComponentEgg.cpp  ComponentEgg.h  FactoryEgg.cpp  FactoryEgg.h
src/components/final/: ComponentFinal.cpp  ComponentFinal.h  FactoryFinal.cpp  FactoryFinal.h
src/components/geometry/: ComponentGeometry.cpp  ComponentGeometry.h  FactoryGeometry.cpp  FactoryGeometry.h
src/components/grid/: ComponentGrid.cpp  ComponentGrid.h
src/components/layer/: ComponentLayer.cpp  ComponentLayer.h
src/components/music/: ComponentMusic.cpp  ComponentMusic.h  FactoryMusic.cpp  FactoryMusic.h
src/components/playerControl/: ComponentPlayerControl.cpp  ComponentPlayerControl.h  FactoryPlayerControl.cpp  FactoryPlayerControl.h  WidgetPlayerControl.cpp  WidgetPlayerControl.h
src/components/sound/: ComponentSound.cpp  ComponentSound.h  FactorySound.cpp  FactorySound.h
src/components/sprite/: ComponentSprite.cpp  ComponentSprite.h  FactorySprite.cpp  FactorySprite.h
src/components/tilesets/: ComponentTilesets.cpp  ComponentTilesets.h
src/components/trail/: ComponentTrailEmitter.cpp  ComponentTrailEmitter.h  FactoryTrail.cpp  FactoryTrail.h
src/engine/: CoreSDL.h
src/engine/assets/: eAsset.h  eAssetResources.h
src/engine/assets/font/: eAssetFont.cpp  eAssetFont.h  eFontLoader.cpp  eFontLoader.h
src/engine/assets/sound/: eAssetMusic.cpp  eAssetMusic.h  eAssetSample.cpp  eAssetSample.h  eSoundLoader.cpp  eSoundLoader.h
src/engine/assets/texture/: eAssetSprite.h  eAssetSubTexture.cpp  eAssetSubTexture.h  eAssetTexture.cpp  eAssetTexture.h  eTextureLoader.cpp  eTextureLoader.h
src/engine/common/: eMath.cpp  eMath.h  eProperty.h  eRect.h  eUtils.cpp  eUtils.h  eV2.cpp  eV2.h
src/engine/debug/: eAssert.cpp  eAssert.h
src/engine/files/: eDir.cpp  eDir.h  eFile.h
src/engine/files/os/: eFileDisk.cpp  eFileDisk.h  eOS.cpp  eOS.h
src/engine/gui/: eWidget.h
src/engine/gui/button/: eButton.cpp  eButton.h  eIconButton.cpp  eIconButton.h
src/engine/gui/label/: eLabel.cpp  eLabel.h
src/engine/input/: eControls.h  eInputController.h
src/engine/input/controllers/: eControllers.cpp  eControllers.h
src/engine/input/keyboard/: eKeyboard.cpp  eKeyboard.h
src/engine/input/screen/: eScreenGamepad.cpp  eScreenGamepad.h  eScreenKey.cpp  eScreenKey.h  eTouchSystem.cpp  eTouchSystem.h
src/engine/render/: eClipping.cpp  eClipping.h  eGraphics.h  eRenderContext.cpp  eRenderContext.h  eSpriteBatch.cpp  eSpriteBatch.h
src/engine/xml/: eTinyxml.cpp  eTinyxml.h
src/map/: GameMap.cpp  GameMap.h
src/map/camera/: Camera.cpp  Camera.h
src/map/grid/: GridCollision.cpp  GridCollision.h
src/map/layers/: Layer.h  Layers.h
src/map/layers/render/: LayerRenderObjects.cpp  LayerRenderObjects.h  (+2 more)
src/map/logic/: GameLogic.cpp  GameLogic.h
src/map/tileset/: Tileset.cpp  Tileset.h
src/map/tmx/: tmxLoader.cpp  tmxLoader.h
src/menu/: MenuScene.cpp  MenuScene.h
src/objects/: FactoryObject.h  GameObject.cpp  GameObject.h
src/playble/: CameraMoving.cpp  CameraMoving.h  PlaybleScene.cpp  PlaybleScene.h
src/scene/: GameScene.cpp  GameScene.h  ScenesController.h
(+25 files in other folders)
